--- a/.github/workflows/des.yml
+++ b/.github/workflows/des.yml
@@ -12,7 +12,7 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
         aws-region: us-east-1
-      uses: albertyc4/terraform-destroy-actions@v3
+      uses: albertyc4/Checkpoint3-2@v3
       with:
         org_name: 'albertyc4'
         repo_name: 'Checkpoint3-2'
