--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,5 @@ jobs:
     - name: Terraform validation
       run: terraform validate
 
-    - name: Terraform destroy
-      run: terraform destroy -auto-approve -input=false
+    - name: Terraform apply
+      run: terraform apply -auto-approve -input=false
